fix scrollbar bug

--- a/src/components/Sider/index.less
+++ b/src/components/Sider/index.less
@@ -1,10 +1,7 @@
 .sider {
-    height: calc(100vh - 64px);
+    height: 100%;
     overflow-y: scroll;
     background: rgb(30, 30, 30);
-    position: fixed;
-    left: 0;
-    top: 64px;
     &::-webkit-scrollbar {
         display: none;
     } 
